<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcampb.wildgingerdinnerdelivery.MainActivity$PlaceholderFragment" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/imageView1" >

        <TableRow
            android:layout_height="60dp"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal"
                android:text="@string/txtTitle"
                android:textSize="60sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textViewDes"
                android:layout_width="wrap_content"
                android:text="@string/txtCookieDes"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btnTime"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/textViewConfrim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/txtConfim"
                android:textColor="#FF0000"
                android:textSize="60sp"
                android:visibility="invisible" />

        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="220dp"
        android:layout_height="685dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/tableLayout1"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/txtImageDes"
        android:src="@drawable/ginger_cookies" />

    <Button
        android:id="@+id/btnContrim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnConfirm"
        android:textSize="40sp" />

</RelativeLayout>